Fix overlapping nonsense

--- a/src/game/elements/Card.module.css
+++ b/src/game/elements/Card.module.css
@@ -63,6 +63,7 @@
   color: white;
   text-shadow: 3px 3px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000,
     -1px 1px 0 #000, 1px 1px 0 #000;
+  z-index: -1;
 }
 
 .lifeCounter {
