--- a/src/game/zones/ActiveLayersZone.module.css
+++ b/src/game/zones/ActiveLayersZone.module.css
@@ -11,6 +11,7 @@
   padding: 2vh;
   border: 1px solid goldenrod;
   border-radius: 20px;
+  z-index: 1000;
 }
 
 .activeLayersTitleContainer {
